# plsync

./: .gitignore  Cargo.toml  Changelog.md  Dockerfile  LICENSE  Makefile  README.md  tbump.toml
.devcontainer/: devcontainer.json
.github/workflows/: audit.yml  lint.yml  release.yml  test.yml
examples/: disk_usage.rs  example1.rs
src/: common.rs  format.rs  lib.rs  main.rs  sync.rs
tests/: integration_test.rs
