[package]
name = "plsync"
version = "0.0.1"
authors = [
    "Guillermo Adrián Molina <guillermoadrianmolina@hotmail.com>",
]

readme = "README.md"
description = "Parallel local only `rsync` implementation in Rust"
license = "BSD-3-Clause"

keywords = ["rsync"]
categories = ["command-line-utilities"]

repository = "https://github.com/guillermomolina/plsync"

edition = "2021"

[dependencies]
rayon = "1.10"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
filetime = "0.2"
humansize = "2.1"
humantime = "2.1"
indicatif = { version = "0.17", features = ["rayon"] }

[dev-dependencies]
