[package]
name = "plsync"
version = "0.2.2"
authors = [
    "Guillermo Adrián Molina <guillermoadrianmolina@hotmail.com>",
]

readme = "README.md"
description = "Parallel local only `rsync` implementation in Rust"
license = "BSD-3-Clause"

keywords = ["rsync", "parallel"]
categories = ["command-line-utilities"]

repository = "https://github.com/guillermomolina/plsync"
homepage = "https://github.com/guillermomolina/plsync/wiki"

edition = "2021"

[dependencies]
rayon = "1.10"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
filetime = "0.2"
indicatif = { version = "0.17", features = ["rayon"] }
number_prefix = "0.4"
glob-match ="0.2"
# regex = "1.5"

[dev-dependencies]
tempfile = "3.19"
